Fixing a little bug in the header on mobile

--- a/wp-content/themes/rosseats/style.css
+++ b/wp-content/themes/rosseats/style.css
@@ -606,12 +606,12 @@ div.vcard .adr p {
         padding-bottom: 0;
         margin-bottom: 0;
         line-height: 1.3;
-        padding-top: 6px;
+        padding-top: 1em;
     }
     #description {
         float: none;
         padding: 0 0 0 140px;
-        margin: 0 0 1em;
+        margin: 0 0 2em;
         line-height: 1;
     }
     #nav li {
